--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@0xpolygonid/js-sdk": "^1.36.1",
+    "@0xpolygonid/js-sdk": "^1.37.0",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -20,12 +23,14 @@
     "date-fns": "^4.1.0",
     "ethers": "^5.8.0",
     "framer-motion": "^12.23.24",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
