Update dependencies and enhance wallet integration. Upgrade ethers to version 6.15.0, add @reown/appkit and @reown/appkit-adapter-ethers for wallet connection, and implement WalletContext for managing wallet state. Refactor layout to include ConnectWalletButton and improve agent usage flow with payment handling and usage statistics in UseAgentModal. Update registration form to require developer wallet input. Enhance KYCModal to reflect wallet connection status.

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
+    "@reown/appkit": "^1.8.13",
+    "@reown/appkit-adapter-ethers": "^1.8.13",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "ethers": "^5.7.2",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.23.24",
     "localforage": "^1.10.0",
     "lucide-react": "^0.546.0",
@@ -31,6 +33,7 @@
     "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "thirdweb": "^5.111.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
