--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.111.8",
+    "viem": "^2.38.6",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
